# hhar-experiments

./: .gitignore  EXPERIMENT_PLAN.md  HHAR_FL_Complete_Analysis.docx  HHAR_FL_Complete_Analysis.md  HHAR_HAR_FL_Literature_Review_Corrected.docx  HHAR_Method_Analysis.md  README.md  create_accuracy_plot.py  create_loss_plot.py  create_results_table.py  setup_env.sh
CFL/: pyproject.toml
CFL/Plots/: plot_cfl_metrics.py
CFL/fedge/: cfl.py  client_app.py  server_app.py  task.py
Fedge-100/fedge/: README.md  orchestrator.py  plot_hierarchical_results.py  pyproject.toml
Fedge-100/fedge/fedge/: __init__.py  cloud_flower.py  cluster_utils.py  leaf_client.py  leaf_server.py  proxy_client.py  scaffold_utils.py  task.py
Fedge-100/fedge/fedge/utils/: bytes_helper.py  fs.py  fs_optimized.py  functional.py  metrics_storage.py
Fedge-100/fedge/runs/20250915_211901_924406/: run_summary.txt
Fedge-Simulation/: SIMULATION_ARCHITECTURE.md  VERIFICATION_ANALYSIS.md  setup.sh
Fedge-Simulation/fedge/: orchestrator.py  pyproject.toml
Fedge-Simulation/fedge/fedge/: partitioning.py  scaffold_utils.py  stats.py  task.py
Fedge-Simulation/fedge/fedge/utils/: agg.py  cloud_metrics.py
HHAR-metrics/: hhar_personalization_analysis.py
HHAR-metrics/hhar_results/: hhar_personalization_report.md
HierFL/Plots/: plot_hierfl_metrics.py
HierFL/fedge/: flower_topo.py  orchestrator.py  plot_hierarchical_results.py  pyproject.toml
HierFL/fedge/fedge/: client_app.py  cloud_flower.py  leaf_client.py  leaf_server.py  partitioning.py  proxy_client.py  server_app.py  stats.py  task.py
HierFL/fedge/fedge/utils/: fs.py
Scaffold/: pyproject.toml
Scaffold/Plots/: plot_scaffold_metrics.py
Scaffold/fedge/: __init__.py  client_app.py  scaffold.py  server_app.py  task.py
fedprox/: pyproject.toml
fedprox/Plots/: plot_fedprox_metrics.py
fedprox/fedge/: client_app.py  server_app.py  task.py
pFedMe/: pyproject.toml
pFedMe/Plots/: plot_pfedme_metrics.py
pFedMe/fedge/: client_app.py  pfedme.py  server_app.py  task.py
