[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedge"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]",
    "torch==2.5.1",
    "pandas",
    "numpy",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "satwat"

[tool.flwr.app.components]
serverapp = "fedge.server_app:app"
clientapp = "fedge.client_app:app"

[tool.flwr.app.config]
# Federated control
num-server-rounds = 100
fraction-fit = 1.0
local-epochs = 5
batch_size = 32

# Partitions/clients
num-partitions = 9
partition-by = "user"               # no Dirichlet; natural heterogeneity

# Data paths
data-root = "hhar/Activity recognition exp"  # direct path to CSV files
use-watches = true                  # keep watch data
sample-rate-hz = 50
window-seconds = 2
window-stride-seconds = 1

# Model
model = "cnn1d"
num-classes = 6

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 9
