[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfedme"
version = "1.0.0"
description = "pFedMe: Personalized Federated Learning with Moreau Envelopes"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.12.0,<2.0",
    "torch>=2.2.1,<3.0",
    "numpy",
    "pandas",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "pfedme"

[tool.flwr.app.components]
serverapp = "fedge.server_app:app"
clientapp = "fedge.client_app:app"

[tool.flwr.app.config]
# Federated control
num-server-rounds = 100
fraction-fit = 1.0
local-epochs = 5
batch_size = 32
min_available_clients = 9  # Deterministic all-client rounds

# Partitions/clients
num-partitions = 9
partition-by = "user"               # no Dirichlet; natural heterogeneity

# Data paths
data-root = "hhar/Activity recognition exp"  # direct path to CSV files
use-watches = true                  # keep watch data
sample-rate-hz = 50
window-seconds = 2
window-stride-seconds = 1

# Model
model = "cnn1d"
num-classes = 6

# pFedMe hyperparameters (matching CharlieDinh/pFedMe)
lamda = 15.0              # Moreau envelope regularization weight
inner_steps = 5           # K: inner optimization steps for θ
outer_steps = 1           # R: outer optimization steps for w
inner_lr = 0.05           # Learning rate for θ optimization (personal_learning_rate)
outer_lr = 0.01           # Learning rate for w outer update (learning_rate)
beta = 1.0                # Server β-mixing parameter (1.0 = no mixing)

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 9
options.ray_init_args.local_mode = true
options.ray_init_args.ignore_reinit_error = true
