[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedge-simulation"
version = "1.0.0"
description = "Hierarchical Federated Learning with Clustering - Simulation Mode (Fast)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "torch>=2.1",
    "scikit-learn>=1.4.2",
    "pandas>=2.2.0",
    "filelock>=3.13.0",
    "psutil>=5.9.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "toml>=0.10.2",
    "requests>=2.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

# Core Hierarchical FL Configuration
[tool.flwr.hierarchy]
num_servers = 3
clients_per_server = [3, 3, 3]
global_rounds = 100
server_rounds_per_global = 1
weight_decay = 0.0001
clip_norm = 1.0
momentum = 0.9
lr_gamma = 0.99
prox_mu = 0.001
prox_mu_min = 0.0001
acc_stable_threshold = 0.002
loss_delta = 0.002

# Dataset
dataset_flag = "hhar"

# SCAFFOLD + FedProx parameters
scaffold_enabled = false

# Learning parameters
lr_init = 0.05
server_lr = 1.0
global_lr = 1.0
local_epochs = 5
batch_size = 32
eval_batch_size = 64
es_delta = 0.001
es_patience = 5

# Accuracy gate (0.0 = accept all improvements)
cluster_better_delta = 0.0

# Evaluation
estimation_batch_size = 32

# HHAR app-level configuration (shared across components)
[tool.flwr.app.config]
data-root = "hhar/Activity recognition exp"
use-watches = true
sample-rate-hz = 50
window-seconds = 2
window-stride-seconds = 1
num-classes = 6
model = "cnn1d"

# Reproducibility
seed = 42  # Override with SEED env variable: SEED=43 python3 simulation_orchestrator.py


# Cloud Clustering Configuration
[tool.flwr.cloud_cluster]
enable = true
start_round = 1                  # clustering begins from round 1
frequency = 1                    # cluster every cloud round
method = "cosine_similarity"     # Pure cosine similarity clustering
tau = 0.7                        # Similarity threshold: merge if abs(cosine_sim) >= tau

# System Configuration
[tool.flwr.cluster.batch_sizes]
logit_batch = 256
feature_batch = 256

[tool.flwr.system]
max_workers = 4
log_level = "INFO"
verbose_logging = true
